# gitolist

./: .gitignore  Application.hs  ContentTypes.hs  DataTypes.hs  Detect.hs  Encodings.hs  Foundation.hs  GitUtils.hs  Gitolite.hs  Import.hs  Model.hs  README.md  Settings.hs  devel.hs  gitolist.cabal  register-user.hs
Handler/: Repos.hs  Root.hs
config/: client_session_key.aes  models  mongoDB.yml  routes  settings.yml
static/img/: dir.ai
templates/: blob.hamlet  blob.lucius  branches.hamlet  commit.hamlet  commits.hamlet  default-layout.hamlet  default-layout.lucius  homepage.hamlet  repo-layout.hamlet  repo-layout.julius  repo-layout.lucius  tags.hamlet  tree.hamlet  tree.lucius
