name:              gitolist
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Hiromi ISHII
maintainer:        Hiromi ISHII
synopsis:          Web frontend for Gitolite
description:       A web frontend for gitolite like gitweb
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://gitolist.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

Flag charsetdetect
    Description:   Use `charsetdetect' package to detect charset.
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Gitolite
                     GitUtils
                     Model
                     ContentTypes
                     Detect
                     Encodings
                     Handler.Repos

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                TypeSynonymInstances
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

executable         gitolist
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    if flag(charsetdetect)
        cpp-options:   -Dcharsetdetect
        build-depends: charsetdetect             >= 1.0        && < 1.1
    else
        build-depends: attoparsec                >= 0.10       && < 0.11

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                TypeSynonymInstances
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , conduit                       >= 0.2        && < 0.3
                 , http-conduit                  >= 1.2        && < 1.3
                 , yesod                         >= 0.10       && < 0.11
                 , yesod-core                    >= 0.10       && < 0.11
                 , yesod-auth                    >= 0.8        && < 0.9
                 , yesod-static                  >= 0.10       && < 0.11
                 , yesod-default                 >= 0.6        && < 0.7
                 , yesod-persistent              >= 0.3        && < 0.4
                 , persistent                    >= 0.8        && < 0.9
                 , persistent-mongoDB            >= 0.8        && < 0.9
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , pandoc                        >= 1.9        && < 2.0
                 , tar                           >= 0.4        && < 0.5
                 , zip-archive                   >= 0.1        && < 0.2
                 , highlighting-kate             >= 0.5        && < 0.6
                 , blaze-html                    >= 0.4        && < 0.5
                 , blaze-builder                 >= 0.3        && < 0.4
                 , hamlet                        >= 0.10       && < 0.11
                 , mongoDB                       >= 1.2        && < 1.3
                 , shakespeare-text              >= 0.10       && < 0.11
                 , wai                           >= 1.1        && < 1.2
                 , wai-extra                     >= 1.1        && < 1.2
                 , transformers                  >= 0.2        && < 0.3
                 , monad-control                 >= 0.3        && < 0.4
                 , yaml                          >= 0.5        && < 0.6
                 , git-object                    >= 0.0        && < 0.1
                 , containers                    >= 0.4        && < 0.5
                 , filepath                      >= 1.2        && < 1.3
                 , parsec                        >= 3.1        && < 3.2
                 , lifted-base                   >= 0.1        && < 0.2
                 , zlib-conduit                  >= 0.2        && < 0.3
                 , directory                     >= 1.1        && < 1.2
                 , time                          >= 1.2        && < 1.3
                 , old-locale                    >= 1.0        && < 1.1

executable register-user
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is: register-user.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                TypeSynonymInstances
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
